--- a/front/src/app/shared/headerclient/headerclient.component.html
+++ b/front/src/app/shared/headerclient/headerclient.component.html
@@ -1,1 +1,14 @@
-<p>headerclient works!</p>
+<nav class="navbar navbar-expand-lg navbar-light custom-bg-color">
+    <a class="navbar-brand custom-stroke" routerLink="">MarketPlace ComicBook</a>
+    <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon btn"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" routerLink="">Comprar</a>
+        <a class="nav-item nav-link" routerLink="">Carro</a>
+        <a class="nav-item nav-link" routerLink="">Historial</a>
+        <a class="nav-item nav-link" routerLink="">Cerrar Sesión</a>
+      </div>
+    </div>
+ </nav>
