Integrate component footer

--- a/front/src/app/components/footer/footer.component.scss
+++ b/front/src/app/components/footer/footer.component.scss
@@ -1,19 +1,49 @@
-.custom-footer {
-    background-color: rgba(29, 41, 81, 1);
-    color: white;
-  
-    p {
-      margin: 0;
-    }
-  
-    a {
-      color: white;
-      font-size: 1.5rem;
-      margin-right: 1rem;
-  
-      &:last-child {
-        margin-right: 0;
-      }
-    }
+.main-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color:rgba(29, 41, 81, 1);
+  color: white;
+  padding: 10px 0;
+
+  p {
+    margin: 0;
   }
-  
+
+  a {
+    color: white;
+    font-size: 1.5rem;
+    margin-right: 1rem;
+}
+ 
+&:last-child {
+  margin-right: 0;
+}
+.social-footer {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  text-align: right;
+  li {
+    display: inline-block;
+    margin-right: 10px;
+     }
+
+  a {
+    display: block;
+    text-align: center;    
+    img {
+      width: 30px;
+      height: 30px;
+      vertical-align: middle;     }
+  }
+
+  li:last-child {
+    margin-right: 0px;  }
+
+   li a img {
+    float: right;
+  }
+}
+}
