--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,5 +1,6 @@
 
 <!-- <router-outlet></router-outlet> -->
+<app-headerclient></app-headerclient>
 <app-banner></app-banner>
 <app-footer></app-footer>
 
