--- a/front/src/app/components/banner/banner.component.scss
+++ b/front/src/app/components/banner/banner.component.scss
@@ -1,5 +1,6 @@
 .banner {
-
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); 
+ margin-top: 1%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
