added header admin html and styles

--- a/front/src/app/shared/headerclient/headerclient.component.html
+++ b/front/src/app/shared/headerclient/headerclient.component.html
@@ -8,7 +8,7 @@
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Comprar</a>
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Carro</a>
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Historial</a>
-      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Cerrar Sesión</a>
+      <a class=" close nav-item nav-link" routerLink="" (click)="closeMenu()">Cerrar Sesión</a>
     </div>
   </div>
 </nav>
