--- a/front/src/app/shared/headeradmin/headeradmin.component.html
+++ b/front/src/app/shared/headeradmin/headeradmin.component.html
@@ -1,1 +1,17 @@
-<p>headeradmin works!</p>
+<nav class="navbar navbar-expand-lg navbar-light custom-bg-color">
+  <a class="navbar-brand custom-stroke" routerLink="">MarketPlace ComicBook</a>
+  <button class="navbar-toggler  " type="button" (click)="toggleMenu()">
+    <span class="bars navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" [ngClass]="{'show': isMenuOpen}" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">List. Cómics</a>
+      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">List. Compra</a>
+      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">List. Usuarios</a>
+      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Compras Clientes</a>
+      <div class="left">
+        <a class="close nav-item nav-link" routerLink="" (click)="closeMenu()">Cerrar Sesión</a>
+      </div>
+    </div>
+  </div>
+</nav>
