Footer text change

--- a/front/src/app/shared/footer/footer.component.html
+++ b/front/src/app/shared/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <p>&copy; 2023 Tu Empresa. Todos los derechos reservados.</p>
+        <p>&copy; 2023 Comic Books. Todos los derechos reservados.</p>
       </div>
       <div class="col-md-6 text-right">
         <ul class="social-footer">
