--- a/front/src/app/shared/headerclient/headerclient.component.scss
+++ b/front/src/app/shared/headerclient/headerclient.component.scss
@@ -26,7 +26,7 @@
     text-align: center;
     background: #ffff;
     font-size: 16px;
-    width: 40%;
+    width: 80%;
 }
 
 .btn {
@@ -76,11 +76,15 @@
     .navbar-brand {
         color: #ffff;
         font-size: 64px;
-        margin-left: 20rem;
+        margin-left: 50rem;
     }
     .navbar-nav {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         justify-content: right;
+    }
+
+    .nav-item{
+        font-size: 16px;
     }
 }
