--- a/front/src/app/shared/headerclient/headerclient.component.scss
+++ b/front/src/app/shared/headerclient/headerclient.component.scss
@@ -20,13 +20,14 @@
 .nav-item {
     border: 1px solid #000;
     border-radius: 28px;
-    margin: 2px 0 0 5px;
+    margin: 5px;
+   
     color: #000;
     font-family: 'Alice', serif;
     text-align: center;
     background: #ffff;
     font-size: 16px;
-    width: 80%;
+    width: 100%;
 }
 
 .btn {
