fixed comopnents at module.ts

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,7 +1,5 @@
-
-<!-- <router-outlet></router-outlet> -->
-<app-banner></app-banner>
-<app-footer></app-footer>
+<router-outlet></router-outlet>
 
 
-<app-headerclient></app-headerclient>
+
+
