--- a/front/src/app/components/listado/listado.component.html
+++ b/front/src/app/components/listado/listado.component.html
@@ -1,53 +1,94 @@
-<table id="example" class="display table-bordered " style="width:90%">
-  <thead>
-      <tr>
-         <th>Isbn </th>
-          <th >Título</th>
-          <th>Autor</th>
-          <th>Géneros</th>
-          <th>Precio</th>
-          <th>Tapa</th>
-      </tr>
-      <tr>
-        <th></th><th><i class="bi bi-sort-alpha-down"></i><i class="bi bi-sort-alpha-up-alt"></i><i class="bi bi-search"></i></th> 
-         <th ></th>
-         <th><i class="bi bi-funnel"></i> </th>
-         <th></th>
-         <th><i class="bi bi-funnel"></i></th>
-         
+<div class="container-table">
+    
         
-     </tr>
-  </thead>
-  <tbody>
-      <tr>
-          <td>Tiger Nixon</td>
-          <td>System Archi</td>
-          <td>Edinburgh</td>
-          <td>61444</td>
-          <td>2011/04/25</td>
-          <td>$320,800</td>
-      </tr>
-      <tr>
-          <td>Garrett W</td>
-          <td>Accountant</td>
-          <td>Tokyo</td>
-          <td>63</td>
-          <td>2011/07/25</td>
-          <td>$170,750</td>
-      </tr>
-      <tr>
-          <td>Ashton Cox</td>
-          <td>Junior Technical Author</td>
-          <td>San Francisco</td>
-          <td>66</td>
-          <td>2009/01/12</td>
-          <td>$86,000</td>
-      </tr>
      
-  </tbody>               
-</table>  
 
-<button id="btn1">clon</button>
-
-
-
+    
+    <table  class="table table-striped table-bordered ">
+        
+        <thead >
+            
+          <tr class="fila">
+            <th scope="col">Isbn</th>
+            
+            
+            
+            <th scope="col">Titulo 
+               <span> 
+                <button style="margin:2px" class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="bi bi-sort-alpha-down"></i></button> <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">A - Z</a></li></ul> 
+           
+    
+                 <button style="margin:2px" class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="bi bi-sort-alpha-up-alt"></i></button> 
+                 <button style="margin:2px" class="btn btn-a" ><i class="bi bi-search"></i></button> <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Z - A</a></li></ul> 
+                
+                </span>  
+                 
+                
+                
+                 <!-- <i class="bi bi-sort-alpha-down"></i><i class="bi bi-sort-alpha-up-alt"></i> -->
+                 
+         
+             
+          </th> 
+          
+            
+            <th scope="col">Autor </th>
+            <th scope="col">Generos <span><button  class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-funnel"></i></button><ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Infantil</a></li>
+                <li><a class="dropdown-item" href="#">Juvenil</a></li>
+                <li><a class="dropdown-item" href="#">Manga</a></li>
+                <li><a class="dropdown-item" href="#">Novela Gráfica</a></li>
+                <li><a class="dropdown-item" href="#">Humor</a></li>
+                <li><a class="dropdown-item" href="#">Superheróes</a></li>
+            </ul>  </span></th>
+            <th scope="col">Precio</th>
+            <th scope="col">Tapa <span><button class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="bi bi-funnel"></i></button> <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Dura</a></li>
+        
+                <li><a class="dropdown-item" href="#">Blanda</a></li>
+            
+            </ul> 
+                
+            
+            </span></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Marina</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>@mdo</td>
+            <td>Blanda</td>
+          </tr>
+          <tr>
+            <td>Otro</td>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>@mdo</td>
+            <td>Dura</td>
+          </tr>
+          <tr>
+            <td>Oklatto</td>
+            <td>Larry Bird</td>
+            <td>@twitter</td>
+            <td>Oklatto</td>
+            <td>@mdo</td>
+            <td>Blanda</td>
+          </tr>
+          <tr>
+            <td>Oklatto</td>
+            <td>Larry Bird</td>
+            <td>@twitter</td>
+            <td>Oklatto</td>
+            <td>@mdo</td>
+            <td>Blanda</td>
+          </tr>
+        </tbody>
+      </table>
+    </div> 
+    
