--- a/front/src/app/components/listado/listado.component.scss
+++ b/front/src/app/components/listado/listado.component.scss
@@ -1,26 +1,49 @@
-table th {
-    
-    color: white;   
-    border: 3px solid #fff;
-    text-align: center;
-    background-color: rgba(29, 41, 81, 1);
+.container-table {
+    height: 100vh;
+    display: flex;
+    margin: auto 40px;
+    align-items: center;
+    justify-content:center;
+ 
+   
+}
+
+table {
+   color: #fff;
+   border: 5px solid #fff;
+   text-align: center;
+   font-size: 20px;
+
+}
+
+ th {
+  background-color: rgba(29, 41, 81, 1);
   color: #fff;
   text-decoration: underline;
   
-
-   
-    }
-
-#example {
   
-   
-    margin: 50px 40px;
-    align-items: center;
-    justify-content:center;
+ 
+}
+
+.bi {
+    margin-left: 70%;
+    font-size: small;
+    color: #fff;
     text-align: center;
+   
+    
+}
+thead {
+    
+    
+
+    align-items: center;
 
 }
 
-tbody {
-    margin-bottom: 80%;
-}
+  .btn {
+    margin-left:5%;
+     padding: 0 .5em;
+   
+ }
+
