Centrar botones de busqueda

--- a/front/src/app/components/listado/listado.component.html
+++ b/front/src/app/components/listado/listado.component.html
@@ -13,14 +13,14 @@
             
             
             
-            <th scope="col">Titulo 
+            <th  scope="col">Titulo 
                <span> 
-                <button style="margin:2px" class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="bi bi-sort-alpha-down"></i></button> <ul class="dropdown-menu">
+                <button style="margin-left:10px" class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="bi bi-sort-alpha-down"></i></button> <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">A - Z</a></li></ul> 
            
     
-                 <button style="margin:2px" class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="bi bi-sort-alpha-up-alt"></i></button> 
-                 <button style="margin:2px" class="btn btn-a" ><i class="bi bi-search"></i></button> <ul class="dropdown-menu">
+                 <button style="margin-left:10px" class="btn btn-a dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" ><i class="bi bi-sort-alpha-up-alt"></i></button> 
+                 <button style="margin:6px" class="btn btn-a" ><i class="bi bi-search"></i></button> <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="#">Z - A</a></li></ul> 
                 
                 </span>  
@@ -87,6 +87,14 @@
             <td>Oklatto</td>
             <td>@mdo</td>
             <td>Blanda</td>
+          </tr>
+          <tr>
+            <td>Otro</td>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>@mdo</td>
+            <td>Dura</td>
           </tr>
         </tbody>
       </table>
