--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -3,9 +3,10 @@
 
 
 <!-- <router-outlet></router-outlet> -->
-<app-headerclient></app-headerclient>
+<!-- <app-headerclient></app-headerclient>
 <app-banner></app-banner>
 <app-comic-table></app-comic-table>
-<app-footer></app-footer>
+<app-footer></app-footer> -->
 
 <!-- <app-comic-list></app-comic-list> -->
+<app-comiclistview></app-comiclistview>
