--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -1,99 +1,91 @@
 <div class="container">
-
   <table class="table table-striped">
     <thead>
       <tr>
-      <th>
-        Título
-        <button
-          class="btn btn-link btn-sm fixed-sort-buttons"
-          (click)="toggleSortOrder('A-Z')"
-        >
-          <img
-            *ngIf="sortByTitleAscending && currentSortOrder === 'A-Z'"
-            src="../../../assets/G49.png"
-            alt="Orden A-Z"
-          />
-          <img
-            *ngIf="!sortByTitleAscending && currentSortOrder === 'Z-A'"
-            src="../../../assets/G49.png"
-            alt="Orden Z-A"
-          />
-        </button>
-        <button
-          class="btn btn-link btn-sm fixed-sort-buttons"
-          (click)="toggleSortOrder('Z-A')"
-        >
-          <img
-            *ngIf="!sortByTitleAscending && currentSortOrder === 'A-Z'"
-            src="../../../assets/G49.png"
-            alt="Orden A-Z"
-          />
-          <img
-            *ngIf="sortByTitleAscending && currentSortOrder === 'Z-A'"
-            src="../../../assets/G49.png"
-            alt="Orden Z-A"
-          />
-        </button>
         
-        <button class="btn btn-link" (click)="toggleSearch()">
-          <img class="search" src="../../../assets/buscar.png" alt="Buscar" /> 
-        </button>
-        <input
-          id="searchInput"
-          type="text"
-          class="form-control"
-          [(ngModel)]="searchTerm"
-          (input)="applyFilters()"
-          placeholder="Buscar..."
-          *ngIf="showSearchInput"
-        />
-      </th>
+        <th>
+          Título
+          <button
+            class="btn btn-link btn-sm fixed-sort-buttons"
+            (click)="toggleSortOrderPopup('A-Z')"
+          >
+            
+          <img
+             
+              src="../../../assets/G49.png"
+              alt="Orden Z-A"
+            />
+          </button>
+          <button
+            class="btn btn-link btn-sm fixed-sort-buttons"
+            (click)="toggleSortOrderPopup('Z-A')"
+          >
+         
+            
+          </button>
+          <button class="btn btn-link" (click)="toggleSearch()">
+            <img class="search" src="../../../assets/buscar.png" alt="Buscar" />
+          </button>
+          <div class="search-popup" *ngIf="showSearchPopup">
+            <input
+              id="searchInput"
+              type="text"
+              class="form-control"
+              [(ngModel)]="searchTerm"
+              (input)="applyFilters()"
+              placeholder="Buscar..."
+            />
+          </div>
+        </th>
 
         <th>Autor</th>
-        <th>Géneros
+        <th>
+          Géneros
           <label for="genreFilter" class="filter-label">
             <img
               src="../../../assets/filter.png"
               alt="Filtrar por Género"
               class="filter-icon"
-              (click)="toggleFilter('genre')"
+              (click)="toggleFilterPopup('genre')"
             />
           </label>
+          <div class="filter-popup" *ngIf="showGenreFilterPopup">
             <select
               id="genreFilter"
               class="form-control"
               [(ngModel)]="selectedGenre"
               (change)="applyFilters()"
-              *ngIf="showGenreFilter"
             >
               <option [ngValue]="null">Todos</option>
               <option *ngFor="let genre of genres" [ngValue]="genre.id">
                 {{ genre.name }}
               </option>
             </select>
+          </div>
         </th>
         <th>Precio</th>
-        <th>Tapa
+        <th>
+          Tapa
           <label for="coverTypeFilter" class="filter-label">
             <img
-              src= "../../../assets/filter.png"
+              src="../../../assets/filter.png"
               alt="Filtrar por Tapa"
               class="filter-icon"
-              (click)="toggleFilter('coverType')"
+              (click)="toggleFilterPopup('coverType')"
             />
           </label>
-          <select
-            id="coverTypeFilter"
-            class="form-control filter-dropdown"
-            [(ngModel)]="selectedCoverType"
-            (change)="applyFilters()"
-            *ngIf="showCoverTypeFilter"
-          >
-            <option [ngValue]="null">Todos</option>
-            <option value="hard">Tapa Dura</option>
-            <option value="soft">Tapa Blanda</option>
-          </select>
+          <div class="filter-popup" *ngIf="showCoverTypeFilterPopup">
+            <select
+              id="coverTypeFilter"
+              class="form-control filter-dropdown"
+              [(ngModel)]="selectedCoverType"
+              (change)="applyFilters()"
+            >
+              <option [ngValue]="null">Todos</option>
+              <option value="hard">Tapa Dura</option>
+              <option value="soft">Tapa Blanda</option>
+            </select>
+          </div>
         </th>
       </tr>
     </thead>
@@ -111,33 +103,51 @@
       </tr>
     </tbody>
   </table>
-
-  <nav aria-label="Page navigation">
-    <ul class="pagination">
-      <li class="page-item" [class.disabled]="currentPage === 1">
-        <a
-          class="page-link"
-          (click)="goToPage(currentPage - 1)"
-          aria-label="Previous"
+  <div class="pagination-container">
+    <nav aria-label="Page navigation">
+      <ul class="pagination">
+        <li class="page-item" [class.disabled]="currentPage === 1">
+          <a class="page-link" (click)="goToPage(1)" aria-label="First"> << </a>
+        </li>
+        <li class="page-item" [class.disabled]="currentPage === 1">
+          <a
+            class="page-link"
+            (click)="goToPage(currentPage - 1)"
+            aria-label="Previous"
+          >
+            <
+          </a>
+        </li>
+        <li class="page-item">
+          <span class="page-link">
+            {{ currentPage }}
+          </span>
+        </li>
+        <li
+          class="page-item"
+          [class.disabled]="currentPage === getTotalPages()"
         >
-          <span aria-hidden="true">&laquo;</span>
-        </a>
-      </li>
-      <li
-        class="page-item"
-        *ngFor="let page of getPages()"
-        [class.active]="currentPage === page"
-      >
-        <a class="page-link" (click)="goToPage(page)">{{ page }}</a>
-      </li>
-      <li class="page-item" [class.disabled]="currentPage === getTotalPages()">
-        <a
-          class="page-link"
-          (click)="goToPage(currentPage + 1)"
-          aria-label="Next"
+          <a
+            class="page-link"
+            (click)="goToPage(currentPage + 1)"
+            aria-label="Next"
+          >
+            >
+          </a>
+        </li>
+        <li
+          class="page-item"
+          [class.disabled]="currentPage === getTotalPages()"
         >
-          <span aria-hidden="true">&raquo;</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+          <a
+            class="page-link"
+            (click)="goToPage(getTotalPages())"
+            aria-label="Last"
+          >
+            >>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
