--- a/front/src/app/views/comiclistview/comiclistview.component.html
+++ b/front/src/app/views/comiclistview/comiclistview.component.html
@@ -1,4 +1,4 @@
-<div><app-headerclient></app-headerclient></div>
+<header><app-headerclient></app-headerclient></header>
 <div><app-banner></app-banner></div>
 <div><app-comic-table></app-comic-table></div>
-<div><app-footer></app-footer></div>
+<footer><app-footer></app-footer></footer>
