--- a/front/src/app/components/comic-table/comic-table.component.scss
+++ b/front/src/app/components/comic-table/comic-table.component.scss
@@ -1,15 +1,15 @@
 table {
   margin-top: 3vh;
-  color: #fff;
-  border: 2px solid #fff;
   text-align: left;
   font-size: 20px;
-  border-collapse: collapse;
-  border-radius: 1em;
-  overflow: hidden;
+  border-spacing: 0;
+  border-radius: 0 0 20px 0;
+  border: 2px solid black;
 }
 
+
 th {
+  border: 1px solid white;
   background-color: rgba(29, 41, 81, 1);
   color: #fff;
   text-decoration: underline;
@@ -18,6 +18,7 @@ th {
 
 td {
   border-bottom: 3px solid #fff;
+  border: 1px solid black;
 }
 
 .bi {
@@ -88,4 +89,8 @@ tr {
 }
 .filter-icon{
   margin-left: 40%;
+}
+.btn-primary{
+  margin-top: 2vh;
+  float: right;
 }
