--- a/front/src/app/components/comic-table/comic-table.component.scss
+++ b/front/src/app/components/comic-table/comic-table.component.scss
@@ -1,6 +1,6 @@
 table {
   margin-top: 3vh;
-  text-align: left;
+  text-align: center;
   font-size: 20px;
   border-spacing: 0;
   border-radius: 0 0 20px 0;
@@ -13,7 +13,8 @@ th {
   background-color: rgba(29, 41, 81, 1);
   color: #fff;
   text-decoration: underline;
-  text-align: left;
+  text-align: center;
+  width: 5vh;
 }
 
 td {
@@ -36,6 +37,7 @@ td {
   margin-left: 10px;
   justify-content: center;
   padding: 0 0.2em;
+  width: vh;
 }
 
 tr {
@@ -93,4 +95,12 @@ tr {
 .btn-primary{
   margin-top: 2vh;
   float: right;
+}
+.search{
+  text-align: left;
+  width: 4vh;
+}
+img, svg {
+  width: 2.3vh;
+  vertical-align: middle;
 }
