subir al repositorio

--- a/front/src/app/shared/footer/footer.component.html
+++ b/front/src/app/shared/footer/footer.component.html
@@ -1,10 +1,10 @@
 <footer class="main-footer widgets-dark typo-light">
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-12">
         <p>&copy; 2023 Comic Books. Todos los derechos reservados.</p>
       </div>
-      <div class="col-md-6 text-right">
+      <div class="col-md-6 col-12 redes-sociales">
         <ul class="social-footer">
           <li class="">
             <a
