--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -1,3 +1,16 @@
+@media screen and (min-width: 768px){
+.redes-sociales{
+  margin-top: 0px;
+}
+}
+
+@media screen and (max-width: 767px){
+  .redes-sociales{
+    margin-top: 10px;
+  }
+  }
+
+
 .main-footer {
   position: fixed;
   bottom: 0;
@@ -9,6 +22,7 @@
 
   p {
     margin: 0;
+    text-align: center;
   }
 
   a {
@@ -24,7 +38,8 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  text-align: right;
+  /* text-align: right; */
+  text-align: center;
   li {
     display: inline-block;
     margin-right: 10px;
