--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="table-responsive">
-  <table class="table table-striped">
+  <table class="table table-striped" >
     <thead>
       <tr>
         <th class="col-md-2">
@@ -37,8 +37,11 @@
               [(ngModel)]="searchTerm"
               (input)="applyFilters()"
               placeholder="Buscar..."
+              onkeydown = "if (event.keyCode == 13) tooggleSearch()"
             />
+            <button class="btn btn-link btn-sm fixed-sort-buttons right"  (click)="refresh()">refresh</button>
           </div>
+          
         </th>
 
         <th class="col-md-2">Autor</th>
@@ -92,7 +95,7 @@
         </th>
       </tr>
     </thead>
-    <tbody>
+    <tbody >
       <tr *ngFor="let comic of comicsOnCurrentPage">
         <td>{{ comic.isbn }}</td>
         <td>{{ comic.title }}</td>
