--- a/front/src/app/components/banner/banner.component.scss
+++ b/front/src/app/components/banner/banner.component.scss
@@ -1,27 +1,16 @@
 .banner {
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); 
- margin-top: 1%;
+ margin-top: 0.5%;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   color: #fff;
   text-align: center;
-  padding: 15vh;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 15vh;
 }
 
-@media (max-width: 768px) {
-
-  .banner h1 {
-    font-size: 2rem;
-  }
-
-  .banner p {
-    font-size: 1rem;
-  }
-}
