--- a/front/src/app/components/comic-table/comic-table.component.scss
+++ b/front/src/app/components/comic-table/comic-table.component.scss
@@ -1,30 +1,20 @@
+
 table {
   margin-top: 3vh;
   color: #fff;
   text-align: left;
-  font-size: 20px;
-  border-radius: 20px;
+  font-size: 2vh;
+  border-radius: 2vh;
   overflow: hidden;
-
   border-spacing: 0;
   border-collapse: separate;
-  border: 3px solid black;
+  border: 0.4vh solid black;
 }
-
-/* table tr:last-child td:first-child {
-  border: 2px solid orange;
-  border-bottom-left-radius: 10px;
+.table-responsive{
+margin-top: 0.1vh;
 }
-  
-table tr:last-child td:last-child {
-  border: 2px solid green;
-  border-bottom-right-radius: 10px;
-} */
-
-
-
 th {
-  border: 1px solid white;
+  border: 0.13vh solid white;
   background-color: rgba(29, 41, 81, 1);
   color: #fff;
   text-decoration: underline;
@@ -33,8 +23,8 @@ th {
 }
 
 td {
-  border-bottom: 3px solid #fff;
-  border: 1px solid black;
+  border-bottom: 0.4vh solid #fff;
+  border: 0.13vh solid black;
 }
 
 .bi {
@@ -44,77 +34,161 @@ td {
 }
 
 .bi-search thead {
-  border-radius: 0 0 20px 20px;
+  border-radius: 0 0 2.70vh 2.70vh;
   align-items: center;
 }
 
 .btn {
-  margin-left: 10px;
+  margin-left: 1.35vh;
   justify-content: center;
-  padding: 0 0.2em;
-  width: vh;
+  padding: 0 0.5vh;
+  width: 2vh; 
 }
 
 tr {
-  border-bottom: 1px solid #ccc;
+  border-bottom: 0.13vh solid #ccc;
 }
 
 .pagination-container {
+  margin-top: 1vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
-  margin-bottom: 55px;
+  margin-bottom: 10vh;
 }
 
 .sorting-container {
   position: absolute;
-  top: 100px;
-  left: 20px;
+  top: 13.53vh;
+  left: 2.70vh;
 }
 
 .search-popup {
-  
-  position: absolute;
-  background-color:rgba(29, 41, 81, 1);
-  border: 1px solid #ccc;
-  padding: 10px;
-  z-index: 1;
-}
-
-
-.filter-popup {
-
   position: absolute;
   background-color: rgba(29, 41, 81, 1);
-  border: 1px solid #ccc;
-  padding: 10px;
+  border: 0.13vh solid #ccc;
+  padding: 1.35vh;
   z-index: 1;
 }
 
+.filter-popup {
+  position: absolute;
+  background-color: rgba(29, 41, 81, 1);
+  border: 0.13vh solid #ccc;
+  padding: 1.35vh;
+  z-index: 1;
+}
 
 .filter-popup select,
 .search-popup input[type="text"] {
-  padding: 5px;
-  margin-top: 5px;
+  padding: 0.67vh;
+  margin-top: 0.67vh;
 }
-
 
 .show-popup {
   display: block;
 }
-.filter-icon{
+
+.filter-icon {
   margin-left: 4%;
+  cursor: pointer;
+  width: 3vh; 
+  margin-right: 8vh; 
 }
-.btn-primary{
+
+.btn-primary {
   margin-top: 2vh;
   float: right;
 }
-.search{
+
+.search {
   text-align: left;
-  width: 4vh;
+  width: 4vh; 
 }
+
 img, svg {
-  width: 2.3vh;
+  width: 2.3vh; 
   vertical-align: middle;
+}
+
+
+@media (min-width: 320px) {
+  table {
+    font-size: 1vh;
+  }
+  .pagination-container {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1vh;
+    margin-bottom: 2vh;
+  }
+  .filter-icon {
+    margin-left: 4%;
+    cursor: pointer;
+    width: 1.5vh; 
+    margin-right: 8vh; 
+  }
+  img, svg {
+    width: 1.5vh; 
+    vertical-align: middle;
+  }
+  .search{
+    margin-left: 4%;
+    cursor: pointer;
+    width: 1.5vh; 
+    margin-right: 8vh; 
+  }
+}
+
+
+@media (min-width: 768px) {
+  .pagination-container {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1vh;
+    margin-bottom: 3vh;
+  }
+}
+
+
+@media (min-width: 1024px) {
+  table {
+    font-size: 2.70vh;
+    margin-top: 3.2vh;
+  }
+  .pagination-container {
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2vh;
+    margin-bottom: 7.5vh;
+  }
+  .filter-icon {
+    margin-left: 4%;
+    cursor: pointer;
+    width: 3vh; 
+    margin-right: 8vh; 
+  }
+  img, svg {
+    width: 2.3vh; 
+    vertical-align: middle;
+  }
+  .search{
+    margin-left: 4%;
+    cursor: pointer;
+    width: 3vh; 
+    margin-right: 8vh; 
+  }
+}
+
+
+@media (min-width: 1440px) {
+  table {
+    font-size: 2.70vh;
+  }
 }
