--- a/front/src/app/shared/footer/footer.component.scss
+++ b/front/src/app/shared/footer/footer.component.scss
@@ -12,7 +12,7 @@
 
 
 .main-footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
   width: 100%;
@@ -38,7 +38,6 @@
   list-style: none;
   padding: 0;
   margin: 0;
-  /* text-align: right; */
   text-align: center;
   li {
     display: inline-block;
