--- a/front/src/app/shared/headerclient/headerclient.component.scss
+++ b/front/src/app/shared/headerclient/headerclient.component.scss
@@ -12,6 +12,7 @@
 
 .navbar-nav {
     align-items: center;
+  
 }
 
 .navbar-toggler{
@@ -38,6 +39,12 @@
 .custom-stroke {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #000000;
+}
+
+nav{
+    top:  0px;
+    width: 100%;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3); 
 }
 
 @media (min-width: 600px) {
