--- a/front/src/app/shared/headerclient/headerclient.component.html
+++ b/front/src/app/shared/headerclient/headerclient.component.html
@@ -7,10 +7,13 @@
   </button>
   <div class="collapse navbar-collapse" [ngClass]="{'show': isMenuOpen}" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Comprar</a>
-      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Carro</a>
+      <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Comprar</a>      
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Historial</a>
       <a class="nav-item nav-link" routerLink="" (click)="closeMenu()">Cerrar Sesión</a>
+    </div>
+    <div class="icons d-none d-sm-none d-none d-md-block">
+      <img src="/assets/cart.png" alt="cart">
+      <img src="/assets/user.png" alt="user">
     </div>
   </div>
 </nav>
