header login done

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -10,8 +10,8 @@
 <app-footer></app-footer> -->
 
 
-
+<app-headerlogin></app-headerlogin>
 
 
 <!-- <app-comic-list></app-comic-list> -->
-<app-comiclistview></app-comiclistview>
+<!-- <app-comiclistview></app-comiclistview> -->
