--- a/front/src/app/shared/headerlogin/headerlogin.component.html
+++ b/front/src/app/shared/headerlogin/headerlogin.component.html
@@ -1,1 +1,3 @@
-<p>headerlogin works!</p>
+<nav class="navbar navbar-expand-lg navbar-light custom-bg-color">
+    <a class="navbar-brand custom-stroke">MarketPlace ComicBook</a> 
+  </nav>
