comic-detail desktop

--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -93,8 +93,8 @@
       </thead>
       <tbody>
         <tr *ngFor="let comic of comicsOnCurrentPage">
-          <td>{{ comic.isbn }}</td>
-          <td>{{ comic.title }}</td>
+          <td><a [routerLink]="['/comic', comic.isbn]"></a>{{ comic.isbn }}</td>
+          <td><a [routerLink]="['/comic', comic.isbn]">{{ comic.title }}</a></td>
           <td>{{ comic.author }}</td>
           <td>
             <span *ngFor="let genre of comic.genres; let last = last">
