--- a/front/src/app/components/login/login.component.html
+++ b/front/src/app/components/login/login.component.html
@@ -1,16 +1,37 @@
-<form>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+<div class="container ">
+  <div class="card">
+
+
+
+    <div class="card-body   p-5 text-center">
+
+
+
+      <h3 class="fw-bold mb-1 text-uppercase">Acceso</h3>
+
+
+      <div class="form-outline form-white d-flex flex-column align-items-center ">
+        <label class="form-label mt-3" for="typeEmailX">Correo</label>
+        <input type="email" id="typeEmailX" class="form-control text-center form-control-lg" />
+
+      </div>
+
+      <div class="form-outline form-white mb-3 d-flex flex-column align-items-center">
+        <label class="form-label" for="typePasswordX">Contraseña</label>
+        <input type="password" id="typePasswordX" class="form-control form-control-lg" />
+
+      </div>
+
+      <p class="small mt-4 pb-lg-1"><a class="text2" href="#!">¿Has olvidado la contraseña?</a></p>
+      <p class="small mt-4 pb-lg-1  registeryou text2">¿No estás registrado?<a href="#!"> <span> Resistrate </span></a>
+      </p>
+      <button class="btn btn-light  mt-2 px-4" type="submit">Enviar</button>
+
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form>
+  </div>
+  <div class="f-stick  "></div>
+
+  <div class="register">
+    <button class="btn2 " type="submit"><strong>Crear cuenta</strong></button>
+  </div>
+</div>
