--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,8 +1,8 @@
-<app-register></app-register>
-<app-login></app-login>
+<!-- <app-register></app-register>
+<app-login></app-login> -->
 
 
-
+<app-newcustomer></app-newcustomer>
 
 <!-- <router-outlet></router-outlet> -->
 <!-- <app-headerclient></app-headerclient>
@@ -15,4 +15,4 @@
 
 
 <!-- <app-comic-list></app-comic-list> -->
-<app-comiclistview></app-comiclistview>
+<!-- <app-comiclistview></app-comiclistview> -->
