--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -2,17 +2,17 @@
 <app-login></app-login> -->
 
 
-<app-newcustomer></app-newcustomer>
+<!-- <app-newcustomer></app-newcustomer> -->
 
 <!-- <router-outlet></router-outlet> -->
- <app-headerclient></app-headerclient>
+<!--  <app-headerclient></app-headerclient> -->
 <!-- <app-banner></app-banner> -->
 <!-- <app-comic-table></app-comic-table> -->
-<app-login></app-login>
-<app-footer></app-footer> 
+<!-- <app-login></app-login> -->
+<!-- <app-footer></app-footer>  -->
 
 
-<app-headerlogin></app-headerlogin>
+<!-- <app-headerlogin></app-headerlogin> -->
 
 
 <!-- <app-comic-list></app-comic-list> -->
