--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -11,12 +11,12 @@
 <app-footer></app-footer> 
 
 
-<app-headerlogin></app-headerlogin>
+<!-- <app-headerlogin></app-headerlogin> -->
 
 
 <!-- <app-comic-list></app-comic-list> -->
 
-
-<router-outlet></router-outlet>
+<!-- 
+<router-outlet></router-outlet> -->
 
 
