--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-headeradmin></app-headeradmin>
+<app-headerclient></app-headerclient>
 <app-banner></app-banner>
 <app-comic-table></app-comic-table>
 <app-footer></app-footer>
