--- a/front/src/app/components/comic-table/comic-table.component.html
+++ b/front/src/app/components/comic-table/comic-table.component.html
@@ -4,8 +4,36 @@
       <thead>
         <tr>
           <th class="col-md-2">
-            CÓDIGO
+            Código
+            <button
+            class="btn btn-link btn-sm fixed-sort-buttons"
+            (click)="toggleSortOrderPopup('A-Z')"
+          >
+            <img src="../../../assets/G49.png" alt="Orden A-Z" />
+          </button>
+        
+            <label for="codigoFilter" class="filter-label">
+              <img
+                src="../../../assets/buscar.png"
+                alt="Filtrar por codigo"
+                class="filter-icon"
+                (click)="toggleFilterPopup('isbn')"
+              />
+            </label>
+            <div class="filter-popup" *ngIf="showisbnFilterPopup">
+              <input
+                id="authorFilter"
+                type="text"
+                class="form-control"
+                [(ngModel)]="searchTerm"
+                (input)="applyFilters()"
+                placeholder="Buscar código..."
+              />
+              <button class="btn btn-primary" (click)="refreshTable()">Refrescar</button>
+            </div>
           </th>
+
+         
           <th class="col-md-2">
             Título
             <button
@@ -17,11 +45,7 @@
                 alt="Orden Z-A"
               />
             </button>
-            <button
-              class="btn btn-link btn-sm fixed-sort-buttons"
-              (click)="toggleSortOrderPopup('Z-A')"
-            >
-            </button>
+         
             <button class="btn btn-link btn-sm fixed-sort-buttons" (click)="toggleSearch()">
               <img class="search" src="../../../assets/buscar.png" alt="Buscar" />
             </button>
@@ -32,7 +56,7 @@
                 class="form-control"
                 [(ngModel)]="searchTerm"
                 (input)="applyFilters()"
-                placeholder="Buscar..."
+                placeholder="Buscar Titulo..."
               />
               <button class="btn btn-primary" (click)="refreshTable()">Refrescar</button>
             </div>
@@ -40,10 +64,16 @@
 
           <th class="col-md-2">
             Autor
-           
+            <button
+            class="btn btn-link btn-sm fixed-sort-buttons"
+            (click)="toggleSortOrderPopup('A-Z')"
+          >
+            <img src="../../../assets/G49.png" alt="Orden A-Z" />
+          </button>
+        
             <label for="authorFilter" class="filter-label">
               <img
-                src="../../../assets/filter.png"
+                src="../../../assets/buscar.png"
                 alt="Filtrar por Autor"
                 class="filter-icon"
                 (click)="toggleFilterPopup('author')"
@@ -60,20 +90,6 @@
               />
               <button class="btn btn-primary" (click)="refreshTable()">Refrescar</button>
             </div>
-          
-           
-            <button
-              class="btn btn-link btn-sm fixed-sort-buttons"
-              (click)="toggleSortOrder('A-Z')"
-            >
-              <img src="../../../assets/G49.png" alt="Orden A-Z" />
-            </button>
-            <button
-            class="btn btn-link btn-sm fixed-sort-buttons"
-            (click)="toggleSortOrder('Z-A')"
-          >
-        
-          </button>
           </th>
         
           <th class="col-md-2">
