--- a/front/src/app/components/comic-table/comic-table.component.scss
+++ b/front/src/app/components/comic-table/comic-table.component.scss
@@ -110,7 +110,7 @@ tr {
 }
 
 .filter-icon {
-/*   margin-left: 4%; */
+margin-left: 56%; 
   cursor: pointer;
   width: 3vh; 
 /*   margin-right: 8vh;  */
