--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -4,11 +4,11 @@
 
 
 <!-- <router-outlet></router-outlet> -->
- <app-headerclient></app-headerclient>
+<!--  <app-headerclient></app-headerclient> -->
 <!-- <app-banner></app-banner> -->
 <!-- <app-comic-table></app-comic-table> -->
-<app-login></app-login>
-<app-footer></app-footer> 
+<!-- <app-login></app-login>
+<app-footer></app-footer>  -->
 
 
 <!-- <app-headerlogin></app-headerlogin> -->
@@ -16,8 +16,8 @@
 
 <!-- <app-comic-list></app-comic-list> -->
 
-<!-- 
-<router-outlet></router-outlet> -->
+
+<router-outlet></router-outlet> 
 
 
 
